--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,3 +35,13 @@ body{
   font-size: 14px;
   outline: 0;
 }
+.rightside input.error-input {
+  border-radius: 5px 5px 0px 0px;
+}
+.error {
+  font-size: 11px;
+  background-color: #ff0000;
+  color: #fff;
+  padding: 4px;
+  border-radius: 0px 0px 5px 5px;
+}
